@@ -1,3 +1,8 @@
+2004-02-26  Jani Monoses <jani@iv.ro>
+
+	* src/load.c:
+	* src/net/http_client.c: Allow overriding the default HTTP port.
+
 2004-02-25  Gratian Crisan <nelu@iv.ro>
 
 	* src/xyzModem.c: Do not read an information header for XModem 
